--- a/ImageFeed/Base.lproj/LaunchScreen.storyboard
+++ b/ImageFeed/Base.lproj/LaunchScreen.storyboard
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,16 +18,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenLogo" translatesAutoresizingMaskIntoConstraints="NO" id="dRR-PE-e49">
-                                <rect key="frame" x="76" y="362" width="240" height="128"/>
+                                <rect key="frame" x="159" y="399.66666666666669" width="75" height="77.666666666666686"/>
+                                <color key="backgroundColor" name="YP Black"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="Ag7-bI-dKa"/>
+                                    <constraint firstAttribute="height" constant="77.680000000000007" id="VK3-kS-wFX"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="labelColor"/>
+                        <color key="backgroundColor" name="YP Black"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dRR-PE-e49" secondAttribute="trailing" constant="77" id="bMd-pb-YWA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dRR-PE-e49" secondAttribute="bottom" constant="328" id="rPf-Es-LIN"/>
-                            <constraint firstItem="dRR-PE-e49" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="76" id="yWb-ND-klc"/>
-                            <constraint firstItem="dRR-PE-e49" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="303" id="ygn-Kl-Dvz"/>
+                            <constraint firstItem="dRR-PE-e49" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="V4I-8b-ceI"/>
+                            <constraint firstItem="dRR-PE-e49" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="caH-I8-YY0"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -38,8 +41,8 @@
     </scenes>
     <resources>
         <image name="LaunchScreenLogo" width="75" height="78"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="YP Black">
+            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
