--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,20 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="pGw-17-Q5e">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="pGw-17-Q5e">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="sectionIndexBackgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="155" id="Qc7-Qa-g33" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="155"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationWidth="10" reuseIdentifier="ImagesListCell" rowHeight="224" id="Qc7-Qa-g33" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="224"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qc7-Qa-g33" id="ffZ-vw-tgI">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="155"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="224"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dvH-Qj-rv4" userLabel="Cell image">
-                                                    <rect key="frame" x="20" y="11" width="353" height="133"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="dvH-Qj-rv4" userLabel="Cell image">
+                                                    <rect key="frame" x="16" y="4" width="361" height="216"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                             <integer key="value" value="16"/>
@@ -38,14 +39,14 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXp-Us-xT3" userLabel="Date label">
-                                                    <rect key="frame" x="28.000000000000007" y="120" width="101.66666666666669" height="16"/>
+                                                    <rect key="frame" x="24.000000000000007" y="196" width="101.66666666666669" height="16"/>
                                                     <accessibility key="accessibilityConfiguration" label="date_label"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOH-Je-8iH" userLabel="Like Button">
-                                                    <rect key="frame" x="331" y="11" width="42" height="42"/>
+                                                    <rect key="frame" x="335" y="4" width="42" height="42"/>
                                                     <accessibility key="accessibilityConfiguration">
                                                         <bool key="isElement" value="NO"/>
                                                     </accessibility>
@@ -53,20 +54,20 @@
                                                     <state key="normal" image="Active"/>
                                                 </button>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" name="YP Black"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aXp-Us-xT3" secondAttribute="trailing" id="5rw-75-96Q"/>
                                                 <constraint firstItem="dvH-Qj-rv4" firstAttribute="bottom" secondItem="aXp-Us-xT3" secondAttribute="bottom" constant="8" id="APz-gM-dMS"/>
-                                                <constraint firstItem="dvH-Qj-rv4" firstAttribute="top" secondItem="ffZ-vw-tgI" secondAttribute="topMargin" id="U3J-la-BiN"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="dvH-Qj-rv4" secondAttribute="trailing" id="X8k-Ip-mhe"/>
+                                                <constraint firstItem="dvH-Qj-rv4" firstAttribute="leading" secondItem="ffZ-vw-tgI" secondAttribute="leading" constant="16" id="Rvu-HP-FQB"/>
                                                 <constraint firstItem="dvH-Qj-rv4" firstAttribute="trailing" secondItem="wOH-Je-8iH" secondAttribute="trailing" id="bRY-32-e77"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="dvH-Qj-rv4" secondAttribute="bottom" id="e7H-B1-UKq"/>
+                                                <constraint firstItem="dvH-Qj-rv4" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aXp-Us-xT3" secondAttribute="trailing" constant="8" id="eEo-wZ-w4D"/>
+                                                <constraint firstAttribute="bottom" secondItem="dvH-Qj-rv4" secondAttribute="bottom" constant="4" id="j8W-NK-CXY"/>
                                                 <constraint firstItem="aXp-Us-xT3" firstAttribute="leading" secondItem="dvH-Qj-rv4" secondAttribute="leading" constant="8" id="j8i-xb-0pu"/>
+                                                <constraint firstAttribute="trailing" secondItem="dvH-Qj-rv4" secondAttribute="trailing" constant="16" id="kpX-DH-37g"/>
+                                                <constraint firstItem="dvH-Qj-rv4" firstAttribute="top" secondItem="ffZ-vw-tgI" secondAttribute="top" constant="4" id="ngO-mS-wUY"/>
                                                 <constraint firstItem="wOH-Je-8iH" firstAttribute="top" secondItem="dvH-Qj-rv4" secondAttribute="top" id="odv-fD-Xzg"/>
-                                                <constraint firstItem="dvH-Qj-rv4" firstAttribute="leading" secondItem="ffZ-vw-tgI" secondAttribute="leadingMargin" id="uWq-Y7-udO"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" name="YP Black"/>
                                         <connections>
                                             <outlet property="cellImage" destination="dvH-Qj-rv4" id="cpB-xm-xfh"/>
                                             <outlet property="dateLabel" destination="aXp-Us-xT3" id="JiX-7P-NHg"/>
@@ -81,7 +82,7 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="YP Black"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="pGw-17-Q5e" secondAttribute="bottom" id="7wK-Ay-CVH"/>
                             <constraint firstItem="pGw-17-Q5e" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8Ml-mz-gd2"/>
@@ -99,6 +100,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="0" width="1600" height="1059"/>
         <image name="Active" width="42" height="42"/>
+        <namedColor name="YP Black">
+            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
