--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -112,14 +112,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ebh-RF-nV5">
-                                <rect key="frame" x="-20" y="-20" width="433" height="892"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ebh-RF-nV5">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="11" translatesAutoresizingMaskIntoConstraints="NO" id="LgO-qB-tOQ">
-                                        <rect key="frame" x="20" y="20" width="393" height="852"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="11" translatesAutoresizingMaskIntoConstraints="NO" id="LgO-qB-tOQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="853" height="1280"/>
                                     </imageView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="LgO-qB-tOQ" firstAttribute="leading" secondItem="ffL-14-3yo" secondAttribute="leading" id="3IF-ps-pkp"/>
+                                    <constraint firstItem="LgO-qB-tOQ" firstAttribute="bottom" secondItem="ffL-14-3yo" secondAttribute="bottom" id="OL6-Z1-1bz"/>
+                                    <constraint firstItem="LgO-qB-tOQ" firstAttribute="trailing" secondItem="ffL-14-3yo" secondAttribute="trailing" id="Q0Q-8b-hPZ"/>
+                                    <constraint firstItem="LgO-qB-tOQ" firstAttribute="top" secondItem="ffL-14-3yo" secondAttribute="top" id="vna-vm-Oqx"/>
+                                </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="ffL-14-3yo"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="ZBO-Ft-LC9"/>
                                 <connections>
@@ -151,13 +156,13 @@
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
                             <constraint firstItem="iLV-vg-E9z" firstAttribute="top" secondItem="XGf-hx-PdN" secondAttribute="top" constant="8" id="0ll-Oe-5nv"/>
-                            <constraint firstItem="Ebh-RF-nV5" firstAttribute="bottom" secondItem="XGf-hx-PdN" secondAttribute="bottom" id="82f-65-CV3"/>
-                            <constraint firstItem="XGf-hx-PdN" firstAttribute="leading" secondItem="Ebh-RF-nV5" secondAttribute="leading" id="D5Z-5k-nHk"/>
+                            <constraint firstItem="Ebh-RF-nV5" firstAttribute="trailing" secondItem="iG6-tr-itG" secondAttribute="trailing" id="Glc-Hj-DBI"/>
+                            <constraint firstItem="iLV-vg-E9z" firstAttribute="leading" secondItem="XGf-hx-PdN" secondAttribute="leading" constant="9" id="IVe-qR-4i4"/>
                             <constraint firstItem="tMP-Ks-4Ra" firstAttribute="centerX" secondItem="XGf-hx-PdN" secondAttribute="centerX" id="LTi-sZ-RKn"/>
-                            <constraint firstItem="Ebh-RF-nV5" firstAttribute="trailing" secondItem="XGf-hx-PdN" secondAttribute="trailing" id="Qw9-EQ-WeR"/>
+                            <constraint firstItem="Ebh-RF-nV5" firstAttribute="top" secondItem="iG6-tr-itG" secondAttribute="top" id="WUQ-84-xnq"/>
+                            <constraint firstItem="Ebh-RF-nV5" firstAttribute="bottom" secondItem="iG6-tr-itG" secondAttribute="bottom" id="myF-QM-rLJ"/>
                             <constraint firstItem="XGf-hx-PdN" firstAttribute="bottom" secondItem="tMP-Ks-4Ra" secondAttribute="bottom" constant="16" id="oFB-Kr-3fa"/>
-                            <constraint firstItem="iLV-vg-E9z" firstAttribute="leading" secondItem="XGf-hx-PdN" secondAttribute="leading" constant="9" id="pXz-67-aFd"/>
-                            <constraint firstItem="XGf-hx-PdN" firstAttribute="top" secondItem="Ebh-RF-nV5" secondAttribute="top" id="qGW-eJ-4I4"/>
+                            <constraint firstItem="Ebh-RF-nV5" firstAttribute="leading" secondItem="iG6-tr-itG" secondAttribute="leading" id="pXz-67-aFd"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eDp-dz-wKm"/>
